--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,12 @@ python:
 
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
   - pip install codecov
+  - python setup.py build
+  - python setup.py install
 
 # command to run tests
 script:
-  - python setup.py build
   - pip install pytest
   - pytest radioencode/__init__.py
   - coverage run radioencode/__init__.py
